Minor layout spacing issue fixed

--- a/src/scss/_canvas.scss
+++ b/src/scss/_canvas.scss
@@ -57,6 +57,7 @@
     border-left: 1px solid $wapp-green;
     margin: 20px;
     box-shadow: 0px 2px 11px -5px rgba(0, 0, 0, 0.75);
+    width: auto;
 
     @media (min-width: 800px) {
         padding: 30px;
